--- a/ethereum/package.json
+++ b/ethereum/package.json
@@ -1,14 +1,16 @@
 {
-  "license" : "Apache-2.0",
+  "license": "Apache-2.0",
   "dependencies": {
     "@openzeppelin/contracts": "^3.1.0",
+    "@truffle/contract": "^4.0.31",
+    "abi-decoder": "^2.3.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "^3.0.0",
+    "rlp": "^2.2.6",
     "solc": "^0.6.12",
     "truffle": "^5.1.32",
-    "@truffle/contract": "^4.0.31",
-    "web3": "^1.2.9",
+    "web3": "^1.2.11",
     "web3-utils": "^1.2.9"
   }
 }
