--- a/parachain/primitives/ethereum/Cargo.toml
+++ b/parachain/primitives/ethereum/Cargo.toml
@@ -5,10 +5,14 @@ authors = ["Snowfork <contact@snowfork.com>"]
 edition = "2018"
 
 [dependencies]
+
+regex = { version = "1.3.9", optional = true }
+ethabi = { version = "12.0.0", optional = true }
 rustc-hex = { version = "2.1.0", default-features = false }
 serde = { version = "1.0", optional = true }
 codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
 rlp = { version = "0.4", default-features = false }
+ethereum = { version = "0.2.0", default-features = false }
 ethbloom = { version = "0.8", default-features = false }
 ethereum-types = { version = "0.9.2", default-features = false }
 libsecp256k1 = { version = "0.3", default-features = false }
@@ -34,6 +38,8 @@ version = '2.0.0-rc4'
 [features]
 default = ["std"]
 std = [
+	"regex",
+	"ethabi",
 	"rustc-hex/std",
 	"serde/std",
 	"ethbloom/std",
